fix(component): add tests, fix problem with the actions not truncating the line
affects: ak-navigation

--- a/packages/ak-navigation/src/components/less/ContainerItem.less
+++ b/packages/ak-navigation/src/components/less/ContainerItem.less
@@ -11,13 +11,19 @@
 
 @border-radius: 3px;
 
+.hide-when-closed {
+  [data-__ak-navigation-container-closed="true"] & {
+    opacity: 0;
+  }
+}
+
 .containerItemOuter {
   width: 100%;
   height: @ak-grid-size * 5;
   box-sizing: border-box;
   text-overflow: ellipsis;
   position: relative;
-
+  
   .isSelected {
     padding: 0;
   }
@@ -45,7 +51,8 @@
   padding: 0 @ak-grid-size;
   box-sizing: border-box;
 
-  .containerItemOuter:hover &, .isSelected & {
+  .containerItemOuter:hover &,
+  .isSelected & {
     background: @ak-color-N20A;
   }
 }
@@ -59,19 +66,21 @@
 }
 
 .link:focus {
+  .focus-ring();
   display: block;
   height: 100%;
   border-radius: @border-radius;
-  .focus-ring();
 }
 
 .action {
-  position: absolute;
-  top: 0;
-  right: @ak-grid-size;;
+  .hide-when-closed();
+
+  display: flex;
   height: 100%;
   justify-content: center;
-  display: flex;
+  position: absolute;
+  right: @ak-grid-size;;
+  top: 0;
 }
 
 .icon {
@@ -89,18 +98,27 @@
   }
 }
 
+.after {
+  min-width: @ak-grid-size * 3;
+}
+
 .text {
+  .hide-when-closed();
+
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   display: inline-block;
   flex-grow: 1;
 
-  [data-__ak-navigation-container-closed="true"] & {
-    opacity: 0;
+  &.hasTextAfterOrAction {
+    margin-right: @ak-grid-size * 3;
   }
 }
 
 .textAfter {
+  .hide-when-closed();
+
+  position: relative;
   z-index: 1;
 }
